<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/et_no_sets"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="5"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textColorLink="@color/primaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sets_label" />

            <EditText
                android:id="@+id/et_no_reps"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="5"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toStartOf="@+id/et_tempo"
                app:layout_constraintStart_toEndOf="@+id/et_no_sets"
                app:layout_constraintTop_toBottomOf="@+id/tv_reps_label" />

            <EditText
                android:id="@+id/et_tempo"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="96dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="4010"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_remove_exercise" />

            <ImageButton
                android:id="@+id/btn_remove_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/all_remove_exercise"
                android:tint="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete" />

            <ImageView
                android:id="@+id/tv_tempo_drag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:tint="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/drag_indicator" />

            <TextView
                android:id="@+id/tv_tempo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tempo_label"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@+id/et_tempo"
                app:layout_constraintEnd_toEndOf="@+id/et_tempo"
                app:layout_constraintStart_toStartOf="@+id/et_tempo"
                app:layout_constraintTop_toBottomOf="@+id/tv_exercise_name" />

            <TextView
                android:id="@+id/tv_reps_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/all_reps_label"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="@+id/et_no_reps"
                app:layout_constraintStart_toStartOf="@+id/et_no_reps"
                app:layout_constraintTop_toBottomOf="@+id/tv_exercise_name" />

            <TextView
                android:id="@+id/tv_sets_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/all_sets_label"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="@+id/et_no_sets"
                app:layout_constraintStart_toStartOf="@+id/et_no_sets"
                app:layout_constraintTop_toBottomOf="@+id/tv_exercise_name" />

            <TextView
                android:id="@+id/tv_exercise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/all_sample_exercise"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/tv_tempo_drag"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>