<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/et_iso_no_sets"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="5"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_iso_sets_label" />

            <EditText
                android:id="@+id/et_iso_time"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="160dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="60"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_remove_iso_exercise"
                app:layout_constraintStart_toEndOf="@+id/et_iso_no_sets" />

            <ImageButton
                android:id="@+id/btn_remove_iso_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/all_remove_exercise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete" />

            <ImageView
                android:id="@+id/iv_iso_drag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:tint="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/drag_indicator" />

            <TextView
                android:id="@+id/tv_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/isometric_time_label"
                app:layout_constraintBottom_toTopOf="@+id/et_iso_time"
                app:layout_constraintEnd_toEndOf="@+id/et_iso_time"
                app:layout_constraintStart_toStartOf="@+id/et_iso_time"
                app:layout_constraintTop_toBottomOf="@+id/tv_iso_exercise_name" />

            <TextView
                android:id="@+id/tv_iso_sets_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/all_sets_label"
                app:layout_constraintEnd_toEndOf="@+id/et_iso_no_sets"
                app:layout_constraintStart_toStartOf="@+id/et_iso_no_sets"
                app:layout_constraintTop_toBottomOf="@+id/tv_iso_exercise_name" />

            <TextView
                android:id="@+id/tv_iso_exercise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/all_sample_exercise"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/iv_iso_drag"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>